@@ -1,3 +1,8 @@
+2009-06-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.ac, libtiff/tif_jpeg.c, libtiff/tif_jpeg_12.c: add support
+	for dual mode 8/12 bit jpeg support. 
+
 2009-06-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_write.c: do not override the planar configuration to be
